# SHU_course

./: README.md  commit.bat
NLP/: pyproject.toml  requirements.txt
NLP/final/: requirements.txt  要求.md  项目报告.md
NLP/final/代码/: app_recruitment.py  build_app_data.py  scrape_positions.py
NLP/final/数据/json/: position_detail_info.json  position_features_info.json  scraped_positions.json
NLP/lab1/: calculator.py  汉字的熵.doc  爱丽丝梦游仙境en.txt  狂人日记.txt
NLP/lab2/: gold.txt  lab2.py  result.txt  test.txt
NLP/lab3/: gold.txt  lab3.py  parsing_result_spacy.json  parsing_result_stanza.json
NLP/lab3/spacy_html/: sentence_1.html  sentence_10.html  sentence_11.html  sentence_12.html  sentence_13.html  sentence_14.html  sentence_15.html  sentence_16.html  sentence_17.html  sentence_18.html  sentence_19.html  sentence_2.html  sentence_20.html  sentence_21.html  sentence_22.html  sentence_23.html  sentence_24.html  sentence_3.html  sentence_4.html  sentence_5.html  sentence_6.html  sentence_7.html  sentence_8.html  sentence_9.html
NLP/lab3/stanza_html/: sentence_1.html  sentence_10.html  sentence_11.html  sentence_12.html  sentence_13.html  sentence_14.html  sentence_15.html  sentence_16.html  sentence_17.html  sentence_18.html  sentence_19.html  sentence_2.html  sentence_20.html  sentence_21.html  sentence_22.html  sentence_23.html  sentence_24.html  sentence_3.html  sentence_4.html  sentence_5.html  sentence_6.html  sentence_7.html  sentence_8.html  sentence_9.html
NLP/lab4/: lab4_results.txt  lab4_solution.py
NLP/lab5/: lab5_results.txt  lab5_solution.py
(+141 files in other folders)
