[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "jieba>=0.42.1",
    "spacy>=3.8.14",
    "stanza>=1.12.0",
    "transformers>=5.8.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
